# dv

./: .editorconfig  .envrc  .gitignore  .gitleaks.toml  .golangci.yaml  .goreleaser.yaml  .pre-commit-config.yaml  .tool-versions  LICENSE  README.md  Taskfile.yaml  go.mod  go.sum  main.go  pyproject.toml  tools.go
.github/: dependabot.yaml
.github/workflows/: ci.yaml  codeql.yml  ec.yaml  gitleaks.yaml  lint.yaml  release.yaml  scan.yaml  test.yaml
cmd/: rm_all.go  rmrf.go  root.go
cmd/dv/: main.go
internal/: acl.go  client.go  igw.go  route_table.go  security_group.go  subnet.go  vpc.go
internal/command/: ls.go  rf.go  rm.go  rmrf.go  root.go
internal/entity/: acl.go  acl_test.go  client.go  errors.go  igw.go  igw_test.go  region.go  route_table.go  route_table_test.go  security_group.go  security_group_test.go  subnet.go  subnet_test.go  vpc.go  vpc_test.go
internal/entity/acl/: acl.go
internal/entity/client/: client.go
internal/entity/igw/: igw.go
internal/entity/region/: region.go
internal/entity/rtb/: rtb.go
internal/entity/sg/: sg.go
internal/entity/subnet/: subnet.go
internal/executor/: all_remover.go  all_remover_test.go  errors.go  executor.go  lister.go  lister_test.go  remove_test.go  remover.go  remover_test.go
internal/presenter/: table.go
internal/runner/: all_remover.go  errors.go  lister.go  remover.go  runner.go
internal/service/: acl.go  client.go  executor.go  igw.go  region.go  route_table.go  security_group.go  subnet.go  vpc.go
internal/util/: util.go
scripts/: install.sh  pre-commit.sh
test/: util.go  vpc.go
(+1 files in other folders)
