[tool.poetry]
name = "delete-aws-default-vpc"
version = "0.1.0"
description = ""
authors = ["knakayama <knakayama.sh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
localstack = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
